--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2019",
     "module": "commonjs",
     "jsx": "react-jsx",
+    "declaration": true,
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -10,7 +11,6 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "allowJs": true,
-    "declaration": false,
     "outDir": "dist",
     "baseUrl": "."
   },
