--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "allowJs": true,
     "outDir": "dist",
-    "baseUrl": "."
+    "baseUrl": ".",
   },
   "include": ["src", "scripts", "test"],
   "exclude": ["node_modules", "dist"]
