--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
   verify:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses:  actions/checkout@v4
 
       - name: Use Node.js
         uses: actions/setup-node@v4
@@ -40,7 +40,7 @@ jobs:
       - name: Check package version
         run: |
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+          TAG_VERSION=${GITHUB_REF#refs/tags/}
           if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
             echo "::error::Package version ($PACKAGE_VERSION) does not match tag version ($TAG_VERSION)"
             exit 1
@@ -51,7 +51,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses:  actions/checkout@v4
 
       - name: Use Node.js (npmjs.org)
         uses: actions/setup-node@v4
@@ -96,7 +96,7 @@ jobs:
     if: success()
 
     steps:
-      - uses: actions/checkout@v3
+      - uses:  actions/checkout@v4
 
       - name: Get package info
         id: package
