--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,13 +21,6 @@ jobs:
 
       - name: Lint
         run: npm run lint
-
-      - name: Lint fix
-        run: npm run lint:fix
-
-      - name: Format
-        run: npm run format
-
       - name: Format check
         run: npm run format:check
 
@@ -37,7 +30,7 @@ jobs:
       - name: Check package version
         run: |
           PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          TAG_VERSION=${GITHUB_REF#refs/tags/}
+          TAG_VERSION=${{ github.event.release.tag_name }}
           if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
             echo "::error::Package version ($PACKAGE_VERSION) does not match tag version ($TAG_VERSION)"
             exit 1
@@ -54,7 +47,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '>=18.0.0'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://registry.npmjs.org/'
+          scope: '@mosmmy'
           cache: 'npm'
 
       - name: Install dependencies
@@ -67,22 +61,10 @@ jobs:
         run: npm run build
 
       - name: Publish to npm registry
-        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Configure GitHub Packages registry
-        uses: actions/setup-node@v4
-        with:
-          node-version: '>=18.0.0'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@mosmmy'
-          cache: 'npm'
-
-      - name: Publish to GitHub Packages
         run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
   notify:
     needs: [build-and-publish-npm]
