--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "generate:icons": "ts-node scripts/generate-icons.ts",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier . --write",
-    "format:check": "prettier . --check",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier src --write",
+    "format:check": "prettier src --check",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --ci --coverage"
