--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,13 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ">=18.x"
           cache: 'npm'
 
       - name: Install dependencies
@@ -29,14 +25,8 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Lint fix
-        run: npm run lint:fix
-
       - name: Format
         run: npm run format
-
-      - name: Format check
-        run: npm run format:check
 
       - name: Test
         run: npm run test
